<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textColor="@color/kaipai"
        android:textSize="14sp"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="合作杂志"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/magazine"
        android:textColor="@color/kaipai"
        android:textSize="14sp"
        android:gravity="center_vertical"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="参加大赛"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_game"
        android:textColor="@color/kaipai"
        android:textSize="14sp"
        />
    

</LinearLayout>
